2009-09-27  Dominique Dumont  <domi.dumont@free.fr> 1.002

	* README : updated license

	* lib/Config/Model/Approx.pm : added missing doc

2009-09-24  Dominique Dumont  <domi.dumont@free.fr> 1.001

	* Initial release 
