@@ -1,3 +1,10 @@
+2009-10-22  Dominique Dumont  <domi.dumont@free.fr> 1.003
+
+	* lib/Config/Model/Approx.pm (read): Convert old style
+	parameters ( without leading '$' - approx < 2.9.0) to new
+	style (with '$'). I.e. 'verbose 1' will be converted to
+	'$verbose 1'
+
 2009-09-27  Dominique Dumont  <domi.dumont@free.fr> 1.002
 
 	* README : updated license
@@ -6,5 +13,5 @@
 
 2009-09-24  Dominique Dumont  <domi.dumont@free.fr> 1.001
 
-	* Initial release 
+	* Initial release
 
